add title for notes, more spacing

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -14,7 +14,7 @@
   <link href="/static/css/bootstrap.min.css" rel="stylesheet">
   <link href="/static/css/main.css" rel="stylesheet">
 
-  <link rel="alternate" type="application/rss+xml" title="Sandwich News Feed" href="/rss.xml">
+  <link rel="alternate" type="application/rss+xml" title="Engineers &amp; Coffee episode feed" href="/rss.xml">
 </head>
 
 <body>
@@ -53,7 +53,7 @@
           <h4>Subscribe</h4>
           <p>
             <li><a href="/rss.xml">RSS</a></li>
-            <li>iTunes</li>
+            <li><a href="https://itunes.apple.com/us/podcast/engineers-coffee/id1086537737">iTunes</a></li>
           </p>
         </div>
         <div class="col-sm-4">
