--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,3 +15,21 @@ pre {
 li {
 	margin-top: 5px;
 }
+
+.blog-post {
+	margin-top: 50px;
+}
+
+.blog-post-audio {
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.show-notes {
+	margin-top: 25px;
+}
+
+.download-link {
+	margin-top: 50px;
+	margin-bottom: 30px;
+}
