--- a/templates/post.html
+++ b/templates/post.html
@@ -14,6 +14,11 @@
 			<h2>{{ title }}</h2>
 			<p class="blog-post-meta"> {{ date|date:"M j, Y" }} </p>
 		</header>
+			<p class="blog-post-audio">
+	  <audio controls>
+	  	<source src="/static/episodes/{{ date|date:"Y" }}/engineers.coffee.{{ date|date:"Y" }}.{{ episode }}.mp3" />
+	  </audio>
+	</p>
 		<section id="post-body">
 			{% block body %}
 				This is where the post contents is.
