--- a/templates/post.html
+++ b/templates/post.html
@@ -11,7 +11,7 @@
 
 	<article class="post">
 		<header>
-			<h2>{{ title }}</h2>
+			<h2>{{ episode }} : {{ title }}</h2>
 			<p class="blog-post-meta"> {{ date|date:"M j, Y" }} </p>
 		</header>
 			<p class="blog-post-audio">
