--- a/templates/post.html
+++ b/templates/post.html
@@ -12,6 +12,7 @@
 	<article class="post">
 		<header>
 			<h2>{{ episode }} : {{ title }}</h2>
+			<p class="subtitle">{{ subtitle }}</p>
 			<p class="blog-post-meta"> {{ date|date:"M j, Y" }} </p>
 		</header>
 			<p class="blog-post-audio">
