google play link

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -54,6 +54,7 @@
           <p>
             <li><a href="/rss.xml">RSS</a></li>
             <li><a href="https://itunes.apple.com/us/podcast/engineers-coffee/id1086537737">iTunes</a></li>
+            <li><a href="https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/I4azyb6rsee2btw464xdsnq6pnq?t%3DEngineers_%2526_Coffee">Google Play</a></li>
           </p>
         </div>
         <div class="col-sm-4">
