--- a/templates/blog.html
+++ b/templates/blog.html
@@ -21,7 +21,7 @@
   <div id="main-header" class="container">
     <div class="row">
       <div class="col-sm-8">
-        <a href="/"><h2><img width="50px" height="50px" src="/static/images/episode-cover.png" /> Engineers & Coffee</h2></a>
+        <a href="/"><h2><img width="50px" height="50px" src="/static/images/episode-cover.png" /> Engineers &amp; Coffee</h2></a>
         <h4>weekly aws/cloud/tech podcast</h4>
       </div>
     </div>
@@ -53,7 +53,7 @@
           <h4>Subscribe</h4>
           <p>
             <li><a href="/rss.xml">RSS</a></li>
-            <li><a href="https://itunes.apple.com/us/podcast/engineers-coffee/id1086537737">iTunes</a></li>
+            <li><a href="https://itunes.apple.com/us/podcast/engineers-coffee/10bd6f6a42b77c3cc393ddd86cce79f0">iTunes</a></li>
             <li><a href="https://goo.gl/app/playmusic?ibi=com.google.PlayMusic&isi=691797987&ius=googleplaymusic&link=https://play.google.com/music/m/I4azyb6rsee2btw464xdsnq6pnq?t%3DEngineers_%2526_Coffee">Google Play</a></li>
           </p>
         </div>
