add banner, remove unused js

--- a/templates/blog2.html
+++ b/templates/blog2.html
@@ -28,6 +28,15 @@
 <body>
 <div class="container">
     <div class="row">
+      <div style="padding-top: 12px;">
+        <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+          <div class="alert alert-info">
+            Need AWS expertise? <a href="http://ogrodnek.com/larry/hire/" class="alert-link">Larry is available for contract work!</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
         <!-- Main column -->
         <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
             <!-- Podcast description -->
@@ -56,9 +65,6 @@
                   Main content
                   {% endblock content %}
                 </div>
-
-
-
 
                 <div class="col-xs-12 col-md-3 col-md-pull-9">
                     <div class="subscribe-block">
@@ -105,10 +111,5 @@
         </div> <!-- end main -->
     </div>  <!-- end row -->
 </div>  <!-- end container -->
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
