--- a/templates/blog2.html
+++ b/templates/blog2.html
@@ -27,7 +27,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="row">
+    <!-- <div class="row">
       <div style="padding-top: 12px;">
         <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
           <div class="alert alert-info">
@@ -35,7 +35,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
     <div class="row">
         <!-- Main column -->
         <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
